# pyzim-tools

./: .gitignore  README.md  pyproject.toml
pyzimtools/: __init__.py  zimanalysis.py
pyzimtools/server/: __init__.py  auth.py  config.py  exceptions.py  runner.py  server.py
pyzimtools/server/static/: style.css
pyzimtools/server/templates/: base.html.jinja  zimlist.html.jinja  zimlistpage.html.jinja
