# pyproject.toml for pyzim-tools


# ============== PACKAGE CONFIG =============

# build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# project metadata
[project]
name = "pyzim-tools"
version = "0.1.1"
description = "ZIM file utilities"
authors = [
  { name = "IMayBeABitShy", email = "imaybeabitshy@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: File Formats",
]
requires-python = ">=3.7"
dependencies = [
    "python-zim@git+https://github.com/IMayBeABitShy/pyzim",
    "bottle",
    "tqdm",
]

# cli scripts
[project.scripts]
pyzim-server = "pyzimtools.server.runner:main"
pyzim-analysis = "pyzimtools.zimanalysis:main"

# optional dependencies
[project.optional-dependencies]
testing = [
    "tox",
]
oauth = [
    "requests",
]
all = [
    "tox",
    "requests",
    "python-zim@git+https://github.com/IMayBeABitShy/pyzim/[all]",
]

# wheel generation
[tool.hatch.build.targets.wheel]
packages = ["pyzimtools"]

# project urls
[project.urls]
"Homepage" = "https://github.com/imaybeabitshy/pyzim-tools"
"Bug Tracker" = "https://github.com/imaybeabitshy/pyzim-tools/issues"

# other hatch settings
[tool.hatch.metadata]
allow-direct-references=true

# ============== TOX/TESTING CONFIG =============

# tox core configuration
[tool.tox]
requires = ["tox>=4.22"]
env_list = [
    "static",
    "docs",
]

# unittest environment
[tool.tox.env_run_base]
description = "Run unittests"
deps = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    ".[all]",
]
commands = [
    ["pytest", "--showlocals", "--log-level=debug", "--cov=pyzimtools", "--cov-branch", "--cov-report", "html:html/coverage", "--cov-report", "term", "--timeout", "5", "--verbose", "tests/", ],
]

[tool.tox.env.static]
description = "Run static code analysis"
deps = [
    "flake8",
]
commands = [
    ["flake8", "--max-line-length", "99999", "pyzimtools", ],
]

[tool.tox.env.docs]
description = "Generate documentation"
# basepython = "python3.9"
deps = [
    "pydoctor",
]
commands = [
    ["pydoctor", "--project-name=PyZim-Tools", "--project-version=0.0.1", "--project-url=https://github.com/IMayBeABitShy/pyzim-tools", "--intersphinx", "https://docs.python.org/3/objects.inv", "--intersphinx", "https://pyzstd.readthedocs.io/en/latest/objects.inv", "--intersphinx", "https://python-zstandard.readthedocs.io/en/latest/objects.inv", "--intersphinx", "https://bottlepy.org/docs/dev/objects.inv", "--intersphinx", "https://jinja.palletsprojects.com/en/stable/objects.inv", "--intersphinx", "https://pyzim.readthedocs.io/en/latest/objects.inv", "--warnings-as-errors", "--make-html", "--html-output", "html/apidocs", "pyzimtools", ],
]

